--- a/index.html
+++ b/index.html
@@ -75,8 +75,6 @@
             <li class="active"><a class="scrollto" href="#welcome">Bienvenue</a></li>
             <li><a class="scrollto" href="#ceremony">Cérémonie</a></li>
             <li><a class="scrollto" href="#info">Infos pratiques</a></li>
-            <!--<li><a class="scrollto" href="#story">Notre histoire</a></li>-->
-            <li><a class="scrollto" href="#hobbies">Loisirs</a></li>
             <li><a class="scrollto" href="#contact">Contact</a></li>
             <li><a class="scrollto" href="#rsvp">RSVP</a></li>
           </ul>
@@ -132,172 +130,86 @@
       </div>
     </div><!-- lead -->
 
-    <div class="section section-about" style="background-image: url('assets/img/pw_maze_white.png');">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="media media-about wow fadeInRight">
-              <div class="media-body text-right">
-                <div class="title">La mariée</div>
-                <h2 class="media-heading">Julie Mayot</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
-              </div>
-              <div class="media-right">
-                <img class="media-object" src="assets/img/groom.jpg" alt="...">
-              </div>
-            </div><!-- media -->
-          </div><!-- col 6 -->
-          <div class="col-md-6">
-            <div class="media media-about wow fadeInLeft">
-              <div class="media-left">
-                <img class="media-object" src="assets/img/bride.jpg" alt="...">
-              </div>
-              <div class="media-body">
-                <div class="title">Le marié</div>
-                <h2 class="media-heading">Victor Bret</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.</p>
-              </div>
-            </div><!-- media -->
-          </div><!-- col 6 -->
-        </div><!-- row -->
-      </div><!-- container -->
-    </div><!-- section -->
-
     <div class="section section-dates parallax-window" id="ceremony" data-parallax="scroll" data-image-src="assets/img/frise.jpg">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="dates-info wow fadeIn">
-              <div class="ceremony">Mariage civil</div>
-              <div class="location">9 Rue Jeanne d'Arc 57140 Plesnois</div>
-              <div class="day-month">7 oct. 2017</div>
-              <!--<div class="year">59 Rue Jeanne d'Arc 57140 Plesnois</div>-->
-              <div class="time">à 17h</div>
+              <div class="vertical">
+                <div class="ceremony">Mariage civil</div>
+                <div class="location">9 Rue Jeanne d'Arc 57140 Plesnois</div>
+                <div class="day-month">7 oct. 2017</div>
+                  <!--<div class="year">59 Rue Jeanne d'Arc 57140 Plesnois</div>-->
+                <div class="time">à 17h</div>
+              </div>
             </div><!-- dates info -->
           </div><!-- col 6 -->
           <div class="col-md-6 col-sm-6">
             <div class="dates-info wow fadeIn">
-              <div class="ceremony ceremony">Cérémonie laïque</div>
-              <div class="location">4, rue Jeanne d'Arc 57160 Châtel-Saint- Germain</div>
-              <div class="day-month">7 oct. 2017</div>
-              <!--<div class="year">Two Thousand and seventeen</div>-->
-              <div class="time">à 17h</div>
+              <div class="vertical">
+                <div class="ceremony ceremony">Cérémonie laïque</div>
+                <div class="location">4, rue Jeanne d'Arc 57160 Châtel-Saint- Germain</div>
+                <div class="day-month">7 oct. 2017</div>
+                <!--<div class="year">Two Thousand and seventeen</div>-->
+                <div class="time">à 17h</div>
+              </div>
             </div><!-- dates info -->
           </div><!-- col 6 -->
         </div><!-- row -->
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="dates-info wow fadeIn">
-              <div class="ceremony ceremony">Vin d'honneur & Diner</div>
-              <div class="location">4, rue Jeanne d'Arc 57160 Châtel-Saint- Germain</div>
-              <div class="day-month">7 oct. 2017</div>
-              <!--<div class="year">Two Thousand and seventeen</div>-->
-              <div class="time">à 17h</div>
+              <div class="vertical">
+                <div class="ceremony ceremony">Vin d'honneur & Diner</div>
+                <div class="location">4, rue Jeanne d'Arc 57160 Châtel-Saint- Germain</div>
+                <div class="day-month">7 oct. 2017</div>
+                <!--<div class="year">Two Thousand and seventeen</div>-->
+                <div class="time">à 17h</div>
+              </div>
+
             </div><!-- dates info -->
           </div><!-- col 6 -->
           <div class="col-md-6 col-sm-6">
             <div class="dates-info wow fadeIn">
-              <div class="ceremony ceremony">Brunch</div>
-              <div class="location">4, rue Jeanne d'Arc 57160 Châtel-Saint- Germain</div>
-              <div class="day-month">7 oct. 2017</div>
-              <!--<div class="year">Two Thousand and seventeen</div>-->
-              <div class="time">à 17h</div>
+              <div class="vertical">
+                <div class="ceremony ceremony">Brunch</div>
+                <div class="location">4, rue Jeanne d'Arc 57160 Châtel-Saint- Germain</div>
+                <div class="day-month">7 oct. 2017</div>
+                <!--<div class="year">Two Thousand and seventeen</div>-->
+                <div class="time">à 17h</div>
+              </div>
             </div><!-- dates info -->
           </div><!-- col 6 -->
         </div><!-- row -->
       </div><!-- container -->
     </div><!-- section-dates -->
 
-    <!-- <div class="section section-gallery parallax-window" id="gallery" data-parallax="scroll" data-image-src="assets/img/gallery-bg.jpg"> -->
-    <!--<div class="section section-gallery" id="gallery" data-parallax="scroll" data-image-src="assets/img/gallery-bg.jpg">-->
-      <!--<div class="overlay overlay-light"></div>-->
-      <!--<div class="container text-center">-->
-        <!--<div class="row">-->
-          <!--<div class="col-md-12">-->
-            <!--<h1 class="wow fadeInDown">Gallerie</h1>-->
-            <!--<div class="sub-title wow fadeInDown">Moments we have spent togather</div>-->
-          <!--</div>-->
-          <!--<div class="col-md-4 col-sm-6">-->
-            <!--<a href="assets/img/gallery/img1.jpg" class="photo wow fadeInUp">-->
-              <!--<img src="assets/img/gallery/img1_thumb.jpg" class="img-responsive">-->
-            <!--</a>-->
-          <!--</div>-->
-          <!--<div class="col-md-4 col-sm-6">-->
-            <!--<a href="assets/img/gallery/img2.jpg" data-wow-delay="0.5s" class="photo wow fadeInUp">-->
-              <!--<img src="assets/img/gallery/img2_thumb.jpg" class="img-responsive">-->
-            <!--</a>-->
-          <!--</div>-->
-          <!--<div class="col-md-4 col-sm-6">-->
-            <!--<a href="assets/img/gallery/img3.jpg" data-wow-delay="1s" class="photo wow fadeInUp">-->
-              <!--<img src="assets/img/gallery/img3_thumb.jpg" class="img-responsive">-->
-            <!--</a>-->
-          <!--</div>-->
-          <!--<div class="col-md-4 col-sm-6">-->
-            <!--<a href="assets/img/gallery/img4.jpg" class="photo wow fadeInUp">-->
-              <!--<img src="assets/img/gallery/img4_thumb.jpg" class="img-responsive">-->
-            <!--</a>-->
-          <!--</div>-->
-          <!--<div class="col-md-4 col-sm-6">-->
-            <!--<a href="assets/img/gallery/img5.jpg" data-wow-delay="0.5s" class="photo wow fadeInUp">-->
-              <!--<img src="assets/img/gallery/img5_thumb.jpg" class="img-responsive">-->
-            <!--</a>-->
-          <!--</div>-->
-          <!--<div class="col-md-4 col-sm-6">-->
-            <!--<a href="assets/img/gallery/img6.jpg" data-wow-delay="1s" class="photo wow fadeInUp">-->
-              <!--<img src="assets/img/gallery/img6_thumb.jpg" class="img-responsive">-->
-            <!--</a>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>&lt;!&ndash; section-gallery &ndash;&gt;-->
-
     <div class="section " id="info">
         <div class="container">
             <h1 class="text-center wow fadeInDown">Infos pratiques</h1>
-            <div class="sub-title text-center wow fadeInDown">
-                A venir
-            </div>
-            <!--<p class="wow fadeIn">-->
-                <!--Bonjour à tous !-->
-            <!--</p>-->
-            <!--<p class="wow fadeIn">-->
-                <!--Nous espérons que vous avez passé un bon week-end... et que vous avez bien bloqué votre week-end du 7 octobre prochain ! ;)-->
-                <!--Puisque nous n'avons pas encore eu l'occasion de tous vous recroiser depuis que nous avons fait nos petits 'Save the Date', on en profite pour vous envoyer ça en PJ.-->
-            <!--</p>-->
-            <!--<p class="wow fadeIn">-->
-                <!--La grande organisation suit son cours et vous devriez recevoir les faire-parts d'ici un petit mois.-->
-                <!--Vous y trouverez pas mal d'information (ainsi que sur le site web en préparation), mais nous avons voulu vous prévenir au plus tôt que nous avions négocié un tarif préférentiel dan un hôtel au sud de Metz (ZAC d'Augny) :-->
-                <!--<ul>-->
-                    <!--<li>Hôtel Kyriad 3 étoiles</li>-->
-                    <!--<li>A 15 minutes de la salle des fêtes et 10mn du centre de Metz (en voiture)</li>-->
-                    <!--<li>Nous allons proposer une navette qui fera le trajet salle <> Kyriad toutes les 30mn entre 01 et 04h (horaire et fréquence non-définitifs)</li>-->
-                    <!--<li>Ils proposent des chambres simple/double/twin au prix négocié de 55€ +1€ de taxe de séjour (+10€ / petit dej en option)</li>-->
-                <!--</ul>-->
-            <!--</p>-->
-            <!--<p class="wow fadeIn">-->
-                <!--Cela reste une option parmi d'autres, mais comme ça vous aurez l'info !-->
-                <!--Si ça vous intéresse, il faut les contacter au 03.87.52.28.70 ou designenzo.metz@kyriad.fr-->
-                <!--Il faut préciser que vous souhaitez profiter du tarif vu entre M. Bret et Beverly (55€) et normalement c'est bon.-->
-                <!--S'ils rechignent prévenez nous, on ira leur tirer les oreilles !-->
-            <!--</p>-->
-            <!--<p class="wow fadeIn">-->
-                <!--Je n'ai pas forcément les adresses mails à jour pour tout le monde, donc n'hésitez pas à en parler aux autres invités que ça pourrait intéresser pour vérifier qu'ils ont bien reçu l'info ;)-->
-                <!--<br>Une bien belle soirée à vous !-->
-            <!--</p>-->
-        </div><!-- container -->
-    </div><!-- section-story -->
-
-    <div class="section " id="hobbies">
-        <div class="container">
-        <h1 class="text-center wow fadeInDown">Loisirs</h1>
+            <h2 class="text-center wow fadeInDown">Réservation d'hôtel</h2>
+            <!--<div class="sub-title text-center wow fadeInDown">-->
+            <!--</div>-->
+            <p class="wow fadeIn">
+              Nous avons négocié des tarifs préférentiels au Kyriad Metz-Sud- Augny, hôtel 3 étoiles à 15mn en
+              voiture de la salle de Châtel.
+              <br>Une navette sera disponible le jour J vers cet hôtel entre 01h et 04h (départs prévus toutes les 30mn
+            environ).
+          </p>
+          <p class="wow fadeIn">
+            <strong>Tarif</strong> : 55€ la chambre (lit simple, lit double ou lits twins) + 1€ taxe de séjour (+10€/petit déjeuner)
+          </p>
+          <p class="wow fadeIn">
+            Si cela vous intéresse, il faut les contacter au 03.87.52.28.70 ou via designenzo.metz@kyriad.fr. Il
+            faut préciser que vous souhaitez profiter du tarif vu entre M. Bret et Beverly (55€)
+          </p>
+        <h2 class="text-center wow fadeInDown">Loisirs</h2>
         <div class="sub-title text-center wow fadeInDown">
             Si avant ou après notre mariage vous souhaitez profiter plus longtemps des charmes de la région, voici quelques incontournables aux alentours de Metz, ou de Strasbourg
         </div>
             <p class="wow fadeIn">
-                A Metz, N’hésitez pas à faire un tour de la ville, en passant notamment par la Cathédrale (bien plus
+              <strong>A Metz</strong>, N’hésitez pas à faire un tour de la ville, en passant notamment par la Cathédrale (bien plus
                 élégante que celle de Strasbourg !), le Temple Protestant, qui offre une des plus belle vues de Metz,
                 le plan d’eau, … . <a href="http://www.tourisme-metz.com/fr/accueil.html">http://www.tourisme-metz.com/fr/accueil.html</a>
             </p>
@@ -311,12 +223,12 @@
                 d’Europe !) ou encore du Snow Hall ou du Casino. <a href="http://www.amneville.com/">http://www.amneville.com/</a>
             </p>
             <p class="wow fadeIn">
-                Songez aussi à poursuivre votre expédition jusqu’à Strasbourg pour découvrir sa Cathédrale (bien
+                Songez aussi à poursuivre votre expédition jusqu’à <strong>Strasbourg</strong> pour découvrir sa Cathédrale (bien
                 plus élégante que celle de Metz !), sa petite France ou encore sa gastronomie !
                 <a href="http://www.otstrasbourg.fr/fr/">http://www.otstrasbourg.fr/fr/</a>
             </p>
             <p class="wow fadeIn">
-                Metz et Strasbourg proposent également des activités ludiques, comme les Escape Game (jeux
+                Metz et Strasbourg proposent également des activités ludiques, comme les <strong>Escape Game</strong> (jeux
                 d’évasion) qui ont la faveur des mariés :
             </p>
             <dl class="dl-horizontal">
@@ -334,8 +246,8 @@
                 </dd>
             </dl>
             <p class="wow fadeIn">
-                Si vous êtes à Strasbourg, vous pouvez aussi traverser la frontière pour vous rendre dans le parc
-                d’attractions le plus connus de la région : Europa Park ! <a href="http://www.europapark.de/fr">http://www.europapark.de/fr</a>
+              Si vous êtes à Strasbourg, vous pouvez aussi traverser la frontière pour vous rendre dans le parc
+              d’attractions le plus connus de la région : <strong>Europa Park</strong> ! <a href="http://www.europapark.de/fr">http://www.europapark.de/fr</a>
             </p>
         </div><!-- container -->
     </div><!-- section-story -->
@@ -343,22 +255,6 @@
     <!-- Maps Section -->
     <div class="section section-map" id="map">
     </div><!-- section-map -->
-    <!--<script>-->
-      <!--function initMap() {-->
-        <!--var uluru = {lat: 22.5463202, lng: 88.3608178};-->
-        <!--var map = new google.maps.Map(document.getElementById('map'), {-->
-          <!--zoom: 16,-->
-          <!--center: uluru,-->
-          <!--styles: [{"stylers":[{"hue":"#ff61a6"},{"visibility":"on"},{"invert_lightness":true},{"saturation":40},{"lightness":10}]}]-->
-        <!--});-->
-        <!--var marker = new google.maps.Marker({-->
-          <!--position: uluru,-->
-          <!--map: map-->
-        <!--});-->
-      <!--}-->
-    <!--</script>-->
-    <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFe7tmKIwQDEW4-_muBXhP8lcJI6QjZKY&callback=initMap"></script>-->
-    <!-- Maps Section Ends Here-->
 
     <div class="section section-gift" id="contact">
       <div class="container">
@@ -399,7 +295,7 @@
                   </div>
                 </div><!-- col 6 -->
                 <div class="col-md-12">
-                  <div class="checkbox"> <label> <input type="checkbox" name="guestName" id="present" checked> Je serais présent(e) </label> </div>
+                  <div class="checkbox"> <label> <input type="checkbox" name="guestName" id="present" checked> Je serai présent(e) </label> </div>
                   <div class="form-group">
                   </div>
                 </div><!-- col 6 -->
@@ -440,7 +336,7 @@
                 <div class="col-md-12">
                   <div class="form-group">
                     <label>Des suggestions de chanson à intégrer à la playlist ?</label>
-                    <textarea name="songs" id="songs" class="form-control" placeholder="René la taupe, ..."></textarea>
+                    <textarea name="songs" id="songs" class="form-control" placeholder=""></textarea>
                   </div>
                 </div><!-- col 12 -->
                 <div class="col-md-12">
@@ -464,7 +360,7 @@
 
     <div class="footer">
       <div class="container text-center">
-        <p>&copy; 2017 - Mariage de Julie & Victor - Réalisé par <a href="https://github.com/mbret">Maxime Bret</a></p>
+        <p class="copyright">&copy; 2017 - Mariage de Julie & Victor - Réalisé par <a href="https://github.com/mbret">Maxime Bret</a></p>
       </div><!-- container -->
     </div><!-- footer -->
 
