--- a/index.html
+++ b/index.html
@@ -83,23 +83,33 @@
     </nav>
 
     <!-- header -->
-    <header style="background-image: url('assets/img/header-bg.jpg');" id="welcome">
+    <header style="background-image: url('assets/img/header_1.jpg');" id="welcome">
       <div class="overlay"></div>
-      <div class="container">
-        <div class="intro-content">
-          <div class="title text-center">Le mariage de</div>
-          <div class="brand text-center">
-            <h1 class="wow fadeInDown">Julie</h1>
-            <div class="heart">
-              <i class="fa fa-heart" aria-hidden="true"></i>
-            </div>
-            <h1 class="wow fadeInDown">Victor</h1>
-          </div><!-- brand -->
-          <div class="location text-center">Châtel-Saint-Germain</div>
-          <div class="date text-center">Samedi 7 octobre 2017</div>
-        </div><!-- intro-content -->
+      <div class="container" style="height: 500px">
+        <!--<div class="intro-content">-->
+          <!--<div class="title text-center">Le mariage de</div>-->
+          <!--<div class="brand text-center">-->
+            <!--<h1 class="wow fadeInDown">Julie</h1>-->
+            <!--<div class="heart">-->
+              <!--<i class="fa fa-heart" aria-hidden="true"></i>-->
+            <!--</div>-->
+            <!--<h1 class="wow fadeInDown">Victor</h1>-->
+          <!--</div>&lt;!&ndash; brand &ndash;&gt;-->
+          <!--<div class="location text-center">Châtel-Saint-Germain</div>-->
+          <!--<div class="date text-center">Samedi 7 octobre 2017</div>-->
+        <!--</div>&lt;!&ndash; intro-content &ndash;&gt;-->
       </div><!-- container -->
     </header>
+
+    <div class="lead text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            Ainsi que leurs parents
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="section section-parents">
       <div class="container">
@@ -194,7 +204,7 @@
             <p class="wow fadeIn">
               Nous avons négocié des tarifs préférentiels au Kyriad Metz-Sud- Augny, hôtel 3 étoiles à 15mn en
               voiture de la salle de Châtel.
-              <br>Une navette sera disponible le jour J vers cet hôtel entre 01h et 04h (départs prévus toutes les 30mn
+              <br>Une navette sera disponible le jour J vers cet hôtel entre 00h et 04h (départs prévus toutes les 30mn
             environ).
           </p>
           <p class="wow fadeIn">
@@ -203,6 +213,9 @@
           <p class="wow fadeIn">
             Si cela vous intéresse, il faut les contacter au 03.87.52.28.70 ou via designenzo.metz@kyriad.fr. Il
             faut préciser que vous souhaitez profiter du tarif vu entre M. Bret et Beverly (55€)
+          </p>
+          <p class="wow fadeIn">
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Dans la même zone, il existe d'autres hôtels (Ibis budget, Campanile, etc.) que la navette pourra également desservir
           </p>
         <h2 class="text-center wow fadeInDown">Loisirs</h2>
         <div class="sub-title text-center wow fadeInDown">
@@ -301,7 +314,7 @@
                 </div><!-- col 6 -->
                 <div class="col-md-12">
                   <div class="form-group">
-                    <label>Viendras-tu</label><br>
+                    <!--<label>Viendras-tu</label><br>-->
                     <label class="checkbox-inline">
                       <input type="radio" name="alone" value="alone"> Seul(e)
                     </label>
@@ -324,7 +337,7 @@
                 </div><!-- col 6 -->
                 <div class="col-md-12">
                   <div class="form-group">
-                    <label>Penses-tu utiliser le service de navette mis en place ?</label><br>
+                    <label>Intéressé(e) par le service de navette mis en place ?</label><br>
                     <label class="checkbox-inline">
                       <input type="radio" name="helpCar" value="yes"> Oui
                     </label>
@@ -335,7 +348,7 @@
                 </div><!-- col 6 -->
                 <div class="col-md-12">
                   <div class="form-group">
-                    <label>Des suggestions de chanson à intégrer à la playlist ?</label>
+                    <label>Des suggestions de chansons à intégrer à la playlist ?</label>
                     <textarea name="songs" id="songs" class="form-control" placeholder=""></textarea>
                   </div>
                 </div><!-- col 12 -->
