--- a/index.html
+++ b/index.html
@@ -144,53 +144,40 @@
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-sm-6">
+          <div class="col-md-12 col-sm-12">
             <div class="dates-info wow fadeIn">
-              <div class="vertical">
-                <div class="ceremony">Mariage civil</div>
-                <div class="location">9 Rue Jeanne d'Arc 57140 Plesnois</div>
-                <div class="day-month">7 oct. 2017</div>
-                  <!--<div class="year">59 Rue Jeanne d'Arc 57140 Plesnois</div>-->
-                <div class="time">à 17h</div>
+              <div class="date">7 octobre 2017</div>
+              <div class="sub-box">
+                <div class="location">
+                  9 Rue Jeanne d'Arc
+                  <br>57140 PLESNOIS
+                </div>
+                <div class="time">16H : Mariage civil</div>
+              </div>
+              <div class="sub-box">
+                <div class="location">
+                  4 Rue Jeanne d'Arc
+                  <br>57160 CHÂTEL-SAINT- GERMAIN
+                </div>
+                <div class="time">17H15 : CÉRÉMONIE LAÏQUE</div>
+                <div class="time">16H : VIN D'HONNEUR & DINER</div>
               </div>
             </div><!-- dates info -->
-          </div><!-- col 6 -->
-          <div class="col-md-6 col-sm-6">
-            <div class="dates-info wow fadeIn">
-              <div class="vertical">
-                <div class="ceremony ceremony">Cérémonie laïque</div>
-                <div class="location">4, rue Jeanne d'Arc 57160 Châtel-Saint- Germain</div>
-                <div class="day-month">7 oct. 2017</div>
-                <!--<div class="year">Two Thousand and seventeen</div>-->
-                <div class="time">à 17h</div>
-              </div>
-            </div><!-- dates info -->
-          </div><!-- col 6 -->
+          </div>
         </div><!-- row -->
         <div class="row">
-          <div class="col-md-6 col-sm-6">
+          <div class="col-md-12 col-sm-12">
             <div class="dates-info wow fadeIn">
-              <div class="vertical">
-                <div class="ceremony ceremony">Vin d'honneur & Diner</div>
-                <div class="location">4, rue Jeanne d'Arc 57160 Châtel-Saint- Germain</div>
-                <div class="day-month">7 oct. 2017</div>
-                <!--<div class="year">Two Thousand and seventeen</div>-->
-                <div class="time">à 17h</div>
-              </div>
-
-            </div><!-- dates info -->
-          </div><!-- col 6 -->
-          <div class="col-md-6 col-sm-6">
-            <div class="dates-info wow fadeIn">
-              <div class="vertical">
-                <div class="ceremony ceremony">Brunch</div>
-                <div class="location">4, rue Jeanne d'Arc 57160 Châtel-Saint- Germain</div>
-                <div class="day-month">7 oct. 2017</div>
-                <!--<div class="year">Two Thousand and seventeen</div>-->
-                <div class="time">à 17h</div>
+              <div class="date">8 octobre 2017</div>
+              <div class="sub-box">
+                <div class="location">
+                  4 Rue Jeanne d'Arc
+                  <br>57160 CHÂTEL-SAINT- GERMAIN
+                </div>
+                <div class="time">10h30 : Brunch</div>
               </div>
             </div><!-- dates info -->
-          </div><!-- col 6 -->
+          </div>
         </div><!-- row -->
       </div><!-- container -->
     </div><!-- section-dates -->
@@ -215,7 +202,7 @@
             faut préciser que vous souhaitez profiter du tarif vu entre M. Bret et Beverly (55€)
           </p>
           <p class="wow fadeIn">
-            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Dans la même zone, il existe d'autres hôtels (Ibis budget, Campanile, etc.) que la navette pourra également desservir
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Dans la même zone, il existe d'autres hôtels (Ibis budget, Campanile, etc.) que la navette pourra également desservir.
           </p>
         <h2 class="text-center wow fadeInDown">Loisirs</h2>
         <div class="sub-title text-center wow fadeInDown">
