--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
         <div class="row">
           <div class="col-md-6 col-sm-6">
             <div class="parents text-center wow fadeIn">
-              <div class="title">Parents de la mariée</div>
+              <!--<div class="title">Parents de la mariée</div>-->
               <h3>Brigitte et Marcel Mayot</h3>
             </div><!-- parents -->
           </div><!-- col 4 -->
           <div class="col-md-6 col-sm-6">
             <div class="parents text-center wow fadeIn">
-              <div class="title">Parents du marié</div>
+              <!--<div class="title">Parents du marié</div>-->
               <h3>Christiane et Philippe Bret</h3>
             </div><!-- parents -->
           </div><!-- col 4 -->
