--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
     </nav>
 
     <!-- header -->
-    <header style="background-image: url('assets/img/header_1.jpg');" id="welcome">
-      <div class="overlay"></div>
-      <div class="container" style="height: 500px">
+    <header class="main-header" id="welcome">
+    <!--<header style="background-image: url('assets/img/header_1.jpg');" id="welcome">-->
+      <!--<div class="overlay"></div>-->
+      <!--<div class="container" style="height: 500px">-->
         <!--<div class="intro-content">-->
           <!--<div class="title text-center">Le mariage de</div>-->
           <!--<div class="brand text-center">-->
@@ -98,7 +99,7 @@
           <!--<div class="location text-center">Châtel-Saint-Germain</div>-->
           <!--<div class="date text-center">Samedi 7 octobre 2017</div>-->
         <!--</div>&lt;!&ndash; intro-content &ndash;&gt;-->
-      </div><!-- container -->
+      <!--</div>&lt;!&ndash; container &ndash;&gt;-->
     </header>
 
     <div class="lead text-center">
