--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                   </div>
                 </div><!-- col 6 -->
                 <div class="col-md-12">
-                  <div class="checkbox"> <label> <input type="checkbox" name="guestName" id="present" checked> Je serai présent(e) </label> </div>
+                  <div class="checkbox"> <label> <input type="checkbox" name="present" id="present" checked> Je serai présent(e) </label> </div>
                   <div class="form-group">
                   </div>
                 </div><!-- col 6 -->
