--- a/index.html
+++ b/index.html
@@ -186,49 +186,49 @@
     <div class="section " id="info">
         <div class="container">
             <h1 class="text-center wow fadeInDown">Infos pratiques</h1>
-            <h2 class="text-center wow fadeInDown">Réservation d'hôtel</h2>
+            <h2 class="text-center wow fadeInDown">Réservation d'hôtel et navette</h2>
             <!--<div class="sub-title text-center wow fadeInDown">-->
             <!--</div>-->
-            <p class="wow fadeIn">
+            <p class="wow fadeIn text-justify">
               Nous avons négocié des tarifs préférentiels au Kyriad Metz-Sud- Augny, hôtel 3 étoiles à 15mn en
               voiture de la salle de Châtel.
               <br>Une navette sera disponible le jour J vers cet hôtel entre 00h et 04h (départs prévus toutes les 30mn
             environ).
           </p>
-          <p class="wow fadeIn">
+          <p class="wow fadeIn text-justify">
             <strong>Tarif</strong> : 55€ la chambre (lit simple, lit double ou lits twins) + 1€ taxe de séjour (+10€/petit déjeuner)
           </p>
-          <p class="wow fadeIn">
+          <p class="wow fadeIn text-justify">
             Si cela vous intéresse, il faut les contacter au 03.87.52.28.70 ou via designenzo.metz@kyriad.fr. Il
             faut préciser que vous souhaitez profiter du tarif vu entre M. Bret et Beverly (55€)
           </p>
-          <p class="wow fadeIn">
+          <p class="wow fadeIn text-justify">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> Dans la même zone, il existe d'autres hôtels (Ibis budget, Campanile, etc.) que la navette pourra également desservir.
           </p>
         <h2 class="text-center wow fadeInDown">Loisirs</h2>
-        <div class="sub-title text-center wow fadeInDown">
+        <div class="sub-title text-center wow fadeInDown text-justify">
             Si avant ou après notre mariage vous souhaitez profiter plus longtemps des charmes de la région, voici quelques incontournables aux alentours de Metz, ou de Strasbourg
         </div>
-            <p class="wow fadeIn">
+            <p class="wow fadeIn text-justify">
               <strong>A Metz</strong>, N’hésitez pas à faire un tour de la ville, en passant notamment par la Cathédrale (bien plus
                 élégante que celle de Strasbourg !), le Temple Protestant, qui offre une des plus belle vues de Metz,
                 le plan d’eau, … . <a href="http://www.tourisme-metz.com/fr/accueil.html">http://www.tourisme-metz.com/fr/accueil.html</a>
             </p>
-            <p class="wow fadeIn">
+            <p class="wow fadeIn text-justify">
                 Pour une virée artistique, vous pourrez également visiter le centre Pompidou :
                 <a href="http://www.centrepompidou-metz.fr/">http://www.centrepompidou-metz.fr/</a>
             </p>
-            <p class="wow fadeIn">
+            <p class="wow fadeIn text-justify">
                 Enfin, pour des moments de détente, ou des visites insolites, vous pourrez vous rendre à Amnéville
                 les Thermes, à 20 minutes de Metz, pour profiter de la Villa Pompéi, du Zoo (un des plus grands
                 d’Europe !) ou encore du Snow Hall ou du Casino. <a href="http://www.amneville.com/">http://www.amneville.com/</a>
             </p>
-            <p class="wow fadeIn">
+            <p class="wow fadeIn text-justify">
                 Songez aussi à poursuivre votre expédition jusqu’à <strong>Strasbourg</strong> pour découvrir sa Cathédrale (bien
                 plus élégante que celle de Metz !), sa petite France ou encore sa gastronomie !
                 <a href="http://www.otstrasbourg.fr/fr/">http://www.otstrasbourg.fr/fr/</a>
             </p>
-            <p class="wow fadeIn">
+            <p class="wow fadeIn text-justify">
                 Metz et Strasbourg proposent également des activités ludiques, comme les <strong>Escape Game</strong> (jeux
                 d’évasion) qui ont la faveur des mariés :
             </p>
@@ -240,15 +240,15 @@
                 </dd>
             </dl>
             <dl class="dl-horizontal">
-                <dt>A Metz</dt>
+                <dt>A Strasbourg</dt>
                 <dd>
                     <a href="https://www.doozescape.com">https://www.doozescape.com</a> (testé et approuvé !)
                     <br><a href="http://a-maze- in.com/#home">http://a-maze- in.com/#home</a> (testé et approuvé !)
                 </dd>
             </dl>
-            <p class="wow fadeIn">
+            <p class="wow fadeIn text-justify">
               Si vous êtes à Strasbourg, vous pouvez aussi traverser la frontière pour vous rendre dans le parc
-              d’attractions le plus connus de la région : <strong>Europa Park</strong> ! <a href="http://www.europapark.de/fr">http://www.europapark.de/fr</a>
+              d’attractions le plus connu de la région : <strong>Europa Park</strong> ! <a href="http://www.europapark.de/fr">http://www.europapark.de/fr</a>
             </p>
         </div><!-- container -->
     </div><!-- section-story -->
@@ -319,7 +319,7 @@
                 </div><!-- col 6 -->
                 <div class="col-md-12">
                   <div class="form-group">
-                    <label>Intéressé(e) par du covoiturage vers la Lorraine ? (Dates et lieu de départ)</label>
+                    <label>Intéressé(e) par du covoiturage vers la Lorraine ? (Date et lieu de départ)</label>
                     <input type="text" name="carpooling" id="carpooling" class="form-control">
                   </div>
                 </div><!-- col 6 -->
